--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /Assessment/assignment_2/data/256_ObjectCategories
 /Assessment/assignment_1b/data/Q1
+
+/Assessment/assignment_2/evening_out_data
